@@ -15,7 +15,7 @@
  * WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
  */
 
-/* $Id: resolver.c,v 1.187.2.6 2001/02/17 02:27:42 bwelling Exp $ */
+/* $Id: resolver.c,v 1.187.2.7 2001/02/20 21:56:23 gson Exp $ */
 
 #include <config.h>
 
@@ -2645,8 +2645,16 @@ cache_name(fetchctx_t *fctx, dns_name_t *name, isc_stdtime_t now) {
 			if (result != ISC_R_SUCCESS)
 				return (result);
 			anodep = &event->node;
-			if (fctx->type != dns_rdatatype_any &&
-			    fctx->type != dns_rdatatype_sig) {
+			/*
+			 * If this is an ANY or SIG query, we're not going
+			 * to return any rdatasets, unless we encountered
+			 * a CNAME or DNAME as "the answer".  In this case,
+			 * we're going to return DNS_R_CNAME or DNS_R_DNAME
+			 * and we must set up the rdatasets.
+			 */
+			if ((fctx->type != dns_rdatatype_any &&
+			    fctx->type != dns_rdatatype_sig) ||
+			    (name->attributes & DNS_NAMEATTR_CHAINING) != 0) {
 				ardataset = event->rdataset;
 				asigrdataset = event->sigrdataset;
 			}
@@ -3668,6 +3676,8 @@ answer_response(fetchctx_t *fctx) {
 					 */
 					if (want_chaining) {
 						chaining = ISC_TRUE;
+						name->attributes |=
+							DNS_NAMEATTR_CHAINING;
 						rdataset->attributes |=
 						    DNS_RDATASETATTR_CHAINING;
 						qname = &tname;
@@ -3780,6 +3790,8 @@ answer_response(fetchctx_t *fctx) {
 						if (result != ISC_R_SUCCESS)
 							return (result);
 						chaining = ISC_TRUE;
+						name->attributes |=
+							DNS_NAMEATTR_CHAINING;
 						rdataset->attributes |=
 						    DNS_RDATASETATTR_CHAINING;
 						qname = dns_fixedname_name(
